fund, verify, check working; get_info for tappd added

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
             dockerfile: Dockerfile
             target: prod
         platform: linux/amd64 # Explicitly set for TDX
-        image: mattdlockyer/based-agent-test:latest
+        image: mattdlockyer/based-agent-test:latest@sha256:9d20000302b1ef33b4dfda7feb157b5859868ef0543da17916ce27f4c872601b
         container_name: web
         ports:
             - '3000:3000'
