--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
+        "build:docker": "sudo docker build --no-cache --target prod -t my-nextjs-app:latest .",
+        "build:docker:dev": "sudo docker build --no-cache --target dev -t my-nextjs-app:latest .",
+        "run:docker": "sudo docker run --rm -p 3000:3000 my-nextjs-app:latest",
+        "run:tappd": "sudo docker run --rm -p 8090:8090 phalanetwork/tappd-simulator:latest",
         "kill:docker": "sudo fuser -k 3000/tcp",
-        "build:docker": "docker build --no-cache --target prod -t my-nextjs-app:latest .",
-        "build:docker:dev": "docker build --no-cache --target dev -t my-nextjs-app:latest .",
-        "run:docker": "docker run --rm -p 3000:3000 my-nextjs-app:latest",
-        "run:tappd": "docker run --rm -p 8090:8090 phalanetwork/tappd-simulator:latest"
+        "docker:image": "sudo docker build --no-cache --target prod -t mattdlockyer/based-agent-test:latest .",
+        "docker:push": "sudo docker push mattdlockyer/based-agent-test"
     },
     "dependencies": {
+        "@phala/dcap-qvl-web": "^0.1.0-beta.2",
         "@phala/dstack-sdk": "^0.1.7",
         "dotenv": "^16.4.7",
-        "file-saver": "^2.0.5",
         "near-api-js": "^5.0.1",
         "near-seed-phrase": "^0.2.1",
         "next": "latest",
