--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
         "test:contract": "cd contract && cargo near build --no-docker && cd .. && ava ./tests/test.js --serial --timeout 30s",
         "dev": "next dev",
         "build": "next build",
-        "build:docker": "sudo docker build --no-cache --target prod -t my-nextjs-app:latest .",
-        "build:docker:dev": "sudo docker build --no-cache --target dev -t my-nextjs-app:latest .",
-        "run:docker": "sudo docker run --rm -p 3000:3000 my-nextjs-app:latest",
-        "run:tappd": "sudo docker run --rm -p 8090:8090 phalanetwork/tappd-simulator:latest",
-        "kill:docker": "sudo fuser -k 3000/tcp",
+        "tappd:run": "sudo docker run --rm -p 8090:8090 phalanetwork/tappd-simulator:latest",
+        "port:kill": "sudo fuser -k 3000/tcp",
+        "docker:build": "sudo docker build --no-cache --target dev -t my-nextjs-app:latest .",
+        "docker:run": "sudo docker run --rm -p 3000:3000 my-nextjs-app:latest",
         "docker:image": "sudo docker build --no-cache --target prod -t mattdlockyer/based-agent-test:latest .",
         "docker:push": "sudo docker push mattdlockyer/based-agent-test"
     },
