--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "docker:build": "sudo docker build --no-cache --target dev -t my-nextjs-app:latest .",
         "docker:run": "sudo docker run --rm -p 3000:3000 my-nextjs-app:latest",
         "docker:image": "sudo docker build --no-cache --target prod -t mattdlockyer/based-agent-test:latest .",
-        "docker:push": "sudo docker push mattdlockyer/based-agent-test"
+        "docker:push": "sudo docker push mattdlockyer/based-agent-test",
+        "docker:prune": "sudo docker system prune"
     },
     "dependencies": {
         "@phala/dcap-qvl-web": "^0.1.0-beta.2",
