--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -14,6 +14,7 @@ serde_json = "1.0.135"
 base64 = "0.22.1"
 hex = { version = "0.4", default-features = false, features = ["alloc"] }
 dcap-qvl = { git = "https://github.com/mattlockyer/dcap-qvl" }
+sha2 = "0.10.8"
 
 # rustls-webpki = {git = "https://github.com/mattlockyer/webpki", default-features = false, features=[
 #    "near-wasm",
