--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
+    "type": "module",
     "private": true,
     "scripts": {
-        "test:contract": "cd contract && cargo near build --no-doc && cd .. && ava ./tests/test.js --serial --timeout 30s",
+        "test:contract": "cd contract && cargo near build non-reproducible-wasm && cd .. && ava ./tests/test.js --serial --timeout 30s",
         "dev": "next dev",
         "build": "next build",
         "tappd:run": "sudo docker run --rm -p 8090:8090 phalanetwork/tappd-simulator:latest",
@@ -10,7 +11,8 @@
         "docker:run": "sudo docker run --rm -p 3000:3000 my-nextjs-app:latest",
         "docker:image": "sudo docker build --no-cache --target prod -t mattdlockyer/based-agent-test:latest .",
         "docker:push": "sudo docker push mattdlockyer/based-agent-test",
-        "docker:prune": "sudo docker system prune"
+        "docker:prune": "sudo docker system prune",
+        "docker:restart": "sudo systemctl restart docker"
     },
     "dependencies": {
         "@phala/dcap-qvl-web": "^0.1.0-beta.2",
