--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-    "type": "module",
     "private": true,
     "scripts": {
         "test:contract": "cd contract && cargo near build non-reproducible-wasm && cd .. && ava ./tests/test.js --serial --timeout 30s",
@@ -15,6 +14,7 @@
         "docker:restart": "sudo systemctl restart docker"
     },
     "dependencies": {
+        "@neardefi/shade-agent-js": "^0.0.5",
         "@phala/dcap-qvl-web": "^0.1.0-beta.2",
         "@phala/dstack-sdk": "^0.1.7",
         "dotenv": "^16.4.7",
