--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
         "@neardefi/shade-agent-js": "^0.0.5",
         "@phala/dcap-qvl-web": "^0.1.0-beta.2",
         "@phala/dstack-sdk": "^0.1.7",
+        "agent-twitter-client": "^0.0.17",
+        "bs58check": "^4.0.0",
         "dotenv": "^16.4.7",
+        "elliptic": "^6.6.1",
+        "ethers": "^6.13.5",
+        "hash.js": "^1.1.7",
+        "js-sha3": "^0.9.3",
+        "keccak": "^3.0.4",
+        "natural": "^8.0.1",
         "near-api-js": "^5.0.1",
         "near-seed-phrase": "^0.2.1",
         "next": "latest",
