--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "type": "module",
     "private": true,
     "scripts": {
+        "deploy:contract": "cd contract && cargo near build non-reproducible-wasm && cd .. && node ./utils/deploy.js",
         "test:contract": "cd contract && cargo near build non-reproducible-wasm && cd .. && ava ./tests/test.js --serial --timeout 30s",
         "dev": "next dev",
         "build": "next build",
@@ -15,7 +15,7 @@
         "docker:restart": "sudo systemctl restart docker"
     },
     "dependencies": {
-        "@neardefi/shade-agent-js": "^0.0.6",
+        "@neardefi/shade-agent-js": "^0.0.10",
         "@phala/dcap-qvl-web": "^0.1.0-beta.2",
         "@phala/dstack-sdk": "^0.1.7",
         "agent-twitter-client": "^0.0.17",
