--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "near-seed-phrase": "^0.2.1",
         "next": "latest",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "twitter-api-v2": "^1.22.0"
     },
     "devDependencies": {
         "ava": "^6.1.3"
