several production fixes

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,19 @@
 services:
     web:
+        environment:
+            BASE_API_KEY: ${TWITTER_USERNAME}
+            TWITTER_USERNAME: ${TWITTER_USERNAME}
+            TWITTER_AUTH_TOKEN: ${TWITTER_AUTH_TOKEN}
+            TWITTER_CT0: ${TWITTER_CT0}
+            TWITTER_GUEST_ID: ${TWITTER_GUEST_ID}
+            TWITTER_BEARER_TOKEN: ${TWITTER_BEARER_TOKEN}
+            TWITTER_API_KEY: ${TWITTER_API_KEY}
+            TWITTER_API_SECRET: ${TWITTER_API_SECRET}
+            NEXT_PUBLIC_contractId: ${NEXT_PUBLIC_contractId}
+            MPC_PUBLIC_KEY_TESTNET: ${MPC_PUBLIC_KEY_TESTNET}
+            MPC_PUBLIC_KEY_MAINNET: ${MPC_PUBLIC_KEY_MAINNET}
         platform: linux/amd64 # Explicitly set for TDX
-        image: mattdlockyer/based-agent-test:latest@sha256:055c88f43b2c3ca73044dcbf956e08c17e79c323690be634ecaf45bf9c64b066
+        image: mattdlockyer/shade-agent-basednames:latest@sha256:d4e7f2c6474482715454727c7177a9d007e4ab36174c7ad92b48371dafbd7cb2
         container_name: web
         ports:
             - '3000:3000'
