--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,19 +1,18 @@
 services:
     web:
         environment:
-            BASE_API_KEY: ${TWITTER_USERNAME}
-            TWITTER_USERNAME: ${TWITTER_USERNAME}
-            TWITTER_AUTH_TOKEN: ${TWITTER_AUTH_TOKEN}
-            TWITTER_CT0: ${TWITTER_CT0}
-            TWITTER_GUEST_ID: ${TWITTER_GUEST_ID}
-            TWITTER_BEARER_TOKEN: ${TWITTER_BEARER_TOKEN}
+            BASE_API_KEY: ${BASE_API_KEY}
+            TWITTER_CLIENT_KEY: ${TWITTER_CLIENT_KEY}
+            TWITTER_ACCESS_TOKEN: ${TWITTER_ACCESS_TOKEN}
+            TWITTER_REFRESH_TOKEN: ${TWITTER_REFRESH_TOKEN}
+            TWITTER_LAST_TIMESTAMP: ${TWITTER_LAST_TIMESTAMP}
             TWITTER_API_KEY: ${TWITTER_API_KEY}
             TWITTER_API_SECRET: ${TWITTER_API_SECRET}
             NEXT_PUBLIC_contractId: ${NEXT_PUBLIC_contractId}
             MPC_PUBLIC_KEY_TESTNET: ${MPC_PUBLIC_KEY_TESTNET}
             MPC_PUBLIC_KEY_MAINNET: ${MPC_PUBLIC_KEY_MAINNET}
         platform: linux/amd64 # Explicitly set for TDX
-        image: mattdlockyer/shade-agent-basednames:latest@sha256:d4e7f2c6474482715454727c7177a9d007e4ab36174c7ad92b48371dafbd7cb2
+        image: mattdlockyer/shade-agent-basednames:latest@sha256:aea797b3988f31aa369efc51eedb878a3b62b4aa2c3099aa06e615fc6fcaf6ca
         container_name: web
         ports:
             - '3000:3000'
