--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "dotenv": "^16.4.7",
         "elliptic": "^6.6.1",
         "ethers": "^6.13.5",
+        "express": "^4.21.2",
+        "express-session": "^1.18.1",
         "hash.js": "^1.1.7",
         "js-sha3": "^0.9.3",
         "keccak": "^3.0.4",
@@ -30,6 +32,7 @@
         "near-api-js": "^5.0.1",
         "near-seed-phrase": "^0.2.1",
         "next": "latest",
+        "next-auth": "^4.24.11",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "twitter-api-v2": "^1.22.0"
