--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,17 +2,18 @@ services:
     web:
         environment:
             BASE_API_KEY: ${BASE_API_KEY}
+            TWITTER_API_KEY: ${TWITTER_API_KEY}
+            TWITTER_API_SECRET: ${TWITTER_API_SECRET}
             TWITTER_CLIENT_KEY: ${TWITTER_CLIENT_KEY}
+            TWITTER_CLIENT_SECRET: ${TWITTER_CLIENT_SECRET}
             TWITTER_ACCESS_TOKEN: ${TWITTER_ACCESS_TOKEN}
             TWITTER_REFRESH_TOKEN: ${TWITTER_REFRESH_TOKEN}
             TWITTER_LAST_TIMESTAMP: ${TWITTER_LAST_TIMESTAMP}
-            TWITTER_API_KEY: ${TWITTER_API_KEY}
-            TWITTER_API_SECRET: ${TWITTER_API_SECRET}
             NEXT_PUBLIC_contractId: ${NEXT_PUBLIC_contractId}
             MPC_PUBLIC_KEY_TESTNET: ${MPC_PUBLIC_KEY_TESTNET}
             MPC_PUBLIC_KEY_MAINNET: ${MPC_PUBLIC_KEY_MAINNET}
         platform: linux/amd64 # Explicitly set for TDX
-        image: mattdlockyer/shade-agent-basednames:latest@sha256:aea797b3988f31aa369efc51eedb878a3b62b4aa2c3099aa06e615fc6fcaf6ca
+        image: mattdlockyer/shade-agent-basednames:latest@sha256:7c5886240b75ca9f0f95b77173d4bc8850f6de68e0d87b200cc04e3719eba19c
         container_name: web
         ports:
             - '3000:3000'
